--- a/PL/about.html
+++ b/PL/about.html
@@ -89,7 +89,7 @@
               razem.
             </p>
             <div class="about-us-our-container">
-              <span class="about-us-our-title">Our Mission</span>
+              <span class="about-us-our-title">Nasza misja</span>
               <p class="about-us-our-descript">
                 Dostarczanie płynnych i opłacalnych rozwiązań logistycznych przy
                 jednoczesnym utrzymaniu najwyższych standardów niezawodności,
@@ -99,7 +99,7 @@
               </p>
             </div>
             <div class="about-us-our-container">
-              <span class="about-us-our-title">Nasza misja</span>
+              <span class="about-us-our-title">Nasza wizja</span>
               <p class="about-us-our-descript">
                 To be a leading global logistics provider, setting the benchmark
                 for innovation, sustainability, and exceptional service in the
