fix:small fix text

--- a/PL/about.html
+++ b/PL/about.html
@@ -101,9 +101,9 @@
             <div class="about-us-our-container">
               <span class="about-us-our-title">Nasza wizja</span>
               <p class="about-us-our-descript">
-                To be a leading global logistics provider, setting the benchmark
-                for innovation, sustainability, and exceptional service in the
-                transportation industry.
+                Być wiodącym globalnym dostawcą usług logistycznych,
+                wyznaczającym standardy innowacyjności, zrównoważonego rozwoju i
+                wyjątkowej obsługi w branży transportowej.
               </p>
             </div>
             <img
@@ -146,8 +146,8 @@
               class="choose-us-card-img"
             />
             <p class="choose-us-card-text">
-              Śledzenie w czasie <br />
-              rzeczywistym
+              Czas rzeczywisty<br />
+              Śledzenie
             </p>
           </div>
           <div class="choose-us-card">
