--- a/PL/career.html
+++ b/PL/career.html
@@ -72,22 +72,24 @@
             <span class="join-us-label label">FIRMA TRANSPORTOWA</span>
             <h2 class="join-us-title title">Dołącz do naszego zespołu!</h2>
             <p class="join-us-descript">
-              We’re looking for CE-licensed drivers. If you're seeking a dynamic
-              workplace with exciting opportunities, we’d love to have you on
-              board!
+              Poszukujemy kierowców z licencją CE. Jeśli szukasz dynamicznego
+              miejsca pracy z ekscytującymi możliwościami, chcielibyśmy mieć Cię
+              na na pokładzie!
             </p>
             <p class="join-us-info">
-              Join our team and be part of the revolution in the logistics
-              industry! At UKOspedition, we believe in the power of teamwork and
-              welcome talented individuals eager to achieve their ambitions and
-              grow with us.
+              Dołącz do naszego zespołu i bądź częścią rewolucji w branży
+              logistycznej! branży! W UKOspedition wierzymy w siłę pracy
+              zespołowej i utalentowane osoby, które chcą realizować swoje
+              ambicje i rozwijać się razem z nami. rozwijać się razem z nami.
             </p>
           </div>
         </div>
       </section>
       <section class="work-with-us">
         <div class="work-with-us-content">
-          <h2 class="work-with-us-title title">Why Work With Us?</h2>
+          <h2 class="work-with-us-title title">
+            Dlaczego warto z nami pracować?
+          </h2>
           <div class="work-card-container wrapper">
             <div class="work-card">
               <img
@@ -95,7 +97,7 @@
                 alt=""
                 class="work-card-img"
               />
-              <p class="work-card-text">Stable Pay & Benefits</p>
+              <p class="work-card-text">Stabilne wynagrodzenie i korzyści</p>
             </div>
             <div class="work-card">
               <img
@@ -103,7 +105,7 @@
                 alt=""
                 class="work-card-img"
               />
-              <p class="work-card-text">Professional Development</p>
+              <p class="work-card-text">Rozwój zawodowy</p>
             </div>
             <div class="work-card">
               <img
@@ -111,7 +113,7 @@
                 alt=""
                 class="work-card-img"
               />
-              <p class="work-card-text">Friendly work environment</p>
+              <p class="work-card-text">Przyjazne środowisko pracy</p>
             </div>
             <div class="work-card">
               <img
@@ -119,7 +121,7 @@
                 alt=""
                 class="work-card-img"
               />
-              <p class="work-card-text">Modern vehicle fleet</p>
+              <p class="work-card-text">Nowoczesna flota pojazdów</p>
             </div>
             <div class="work-card">
               <img
@@ -127,7 +129,7 @@
                 alt=""
                 class="work-card-img"
               />
-              <p class="work-card-text">Job Security</p>
+              <p class="work-card-text">Bezpieczeństwo pracy</p>
             </div>
           </div>
         </div>
@@ -136,10 +138,10 @@
         <div class="opportunity-contact">
           <div class="opportunity-contact-info work">
             <span class="opportunity-contact-number semi-title"
-              >Interested in joining our team?</span
+              >Chcesz dołączyć do naszego zespołu?</span
             >
             <span class="opportunity-contact-text"
-              >Submit your application</span
+              >Prześlij swoją aplikację</span
             >
           </div>
           <img
@@ -149,7 +151,7 @@
           />
           <div class="opportunity-contact-info">
             <span class="opportunity-contact-number semi-title"
-              >Email us at</span
+              >Napisz do nas na adres</span
             >
             <span class="opportunity-contact-text"
               >ukospedition@ukospedition.com</span
@@ -172,7 +174,7 @@
           <div class="card-footer">
             <img src="../src/img/location.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Addres</p>
+              <p class="card-footer-category">Adres</p>
               <p class="card-footer-text">
                 Powstańców 97, 05-870<br />
                 Błonie Poland
@@ -182,7 +184,7 @@
           <div class="card-footer">
             <img src="../src/img/mobile.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Contact</p>
+              <p class="card-footer-category">Kontakt</p>
               <p class="card-footer-text">
                 ukospedition@ukospedition.com <br />
                 +48 57 583 18 10
@@ -192,10 +194,10 @@
           <div class="card-footer">
             <img src="../src/img/timing.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Timing</p>
+              <p class="card-footer-category">Godziny otwarcia</p>
               <p class="card-footer-text">
-                Mon - Sat: 8 am - 5 pm, <br />
-                Sunday: CLOSED
+                Pon – Sob 8:00 – 17:00, <br />
+                Niedziela: ZAMKNIĘTE
               </p>
             </div>
           </div>
@@ -211,42 +213,46 @@
               challenges and creating new ones in <br />
               advertising sector. -->
             </p>
-            <a href="about.html" class="footer-compant-btn btn">Read more</a>
+            <a href="about.html" class="footer-compant-btn btn"
+              >CZYTAJ WIĘCEJ</a
+            >
           </div>
           <div class="footer-services">
-            <h5 class="footer-section-title">Services</h5>
+            <h5 class="footer-section-title">Usługi</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="about.html" class="footer-list-link"> About Us </a>
+                <a href="about.html" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Our Team </a>
+                <a href="#" class="footer-list-link">Nasz zespół</a>
               </li>
               <li class="footer-list-item">
-                <a href="contact.html" class="footer-list-link">Contact Us </a>
+                <a href="contact.html" class="footer-list-link"
+                  >Skontaktuj się z nami</a
+                >
               </li>
             </ul>
           </div>
           <div class="footer-links">
-            <h5 class="footer-section-title">Useful Links</h5>
+            <h5 class="footer-section-title">Przydatne linki</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="about.html" class="footer-list-link">About </a>
+                <a href="about.html" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="contact.html" class="footer-list-link"> Contact </a>
+                <a href="contact.html" class="footer-list-link">Kontakt</a>
               </li>
 
               <li class="footer-list-item">
-                <a href="services.html" class="footer-list-link">Services </a>
+                <a href="services.html" class="footer-list-link">Usługi</a>
               </li>
             </ul>
           </div>
           <div class="footer-newsletter">
             <h5 class="footer-section-title">Newsletter</h5>
             <p class="footer-newsletter-descript">
-              Subscribe our newsletter to get our latest <br />
-              update & news
+              Zapisz się do naszego newslettera, aby otrzymywać najnowsze <br />
+              aktualizacje i wiadomości
             </p>
             <form action="" class="footer-newsletter-form">
               <input
