fead:add favicon

--- a/PL/contact.html
+++ b/PL/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
+    <link rel="shortcut icon" href="../src/img/fav.png" type="image/png" />
     <link rel="stylesheet" href="../contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -227,28 +228,28 @@
               <form action="" class="contact-us-form">
                 <input
                   type="text"
-                  placeholder="Your Name"
+                  placeholder="Twoje imię"
                   class="contact-us-input"
                 />
                 <input
                   type="email"
-                  placeholder="Enter Email"
+                  placeholder="E-mail"
                   class="contact-us-input"
                 />
                 <input
                   type="text"
-                  placeholder="Subject"
+                  placeholder="Przedmiot"
                   class="contact-us-input"
                 />
                 <input
                   type="text"
-                  placeholder="Phone"
+                  placeholder="Telefon"
                   class="contact-us-input"
                 />
                 <textarea
                   name=""
                   id=""
-                  placeholder="Message"
+                  placeholder="Wiadomość"
                   class="contact-us-textarea"
                   rows="5"
                 ></textarea>
