fix: fix size font

--- a/PL/services.html
+++ b/PL/services.html
@@ -90,7 +90,7 @@
               >specjalizują się w transporcie
             </span>
             <h2 class="our-services-card-title title">
-              SPECJALISTYCZNE USŁUGI LOGISTYCZNE
+              Specjalistyczne usługi logistyczne
             </h2>
           </div>
 
